--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@astrojs/rss": "^4.0.12",
     "@astrojs/sitemap": "^3.5.1",
     "astro": "^5.13.4",
+    "leaflet": "^1.9.4",
     "sharp": "^0.34.2"
+  },
+  "devDependencies": {
+    "@astrojs/tailwind": "^6.0.2"
   }
 }
