--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/mdx": "^4.3.4",
     "@astrojs/rss": "^4.0.12",
     "@astrojs/sitemap": "^3.5.1",
+    "@types/leaflet": "^1.9.20",
     "astro": "^5.13.4",
     "leaflet": "^1.9.4",
     "sharp": "^0.34.2"
