feat: add Google Search Console verification support

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,8 @@
 # Obtén tu ID en: https://analytics.google.com/
 # Formato: G-XXXXXXXXXX
 PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
+
+# Google Search Console
+# Obtén tu código de verificación en: https://search.google.com/search-console/
+# Formato: ABC123XYZ...
+PUBLIC_GSC_VERIFICATION=
