--- a/package.json
+++ b/package.json
@@ -13,12 +13,11 @@
     "@astrojs/mdx": "^4.3.4",
     "@astrojs/rss": "^4.0.12",
     "@astrojs/sitemap": "^3.5.1",
+    "@tailwindcss/vite": "^4.1.14",
     "@types/leaflet": "^1.9.20",
     "astro": "^5.13.4",
     "leaflet": "^1.9.4",
-    "sharp": "^0.34.2"
-  },
-  "devDependencies": {
-    "@astrojs/tailwind": "^6.0.2"
+    "sharp": "^0.34.2",
+    "tailwindcss": "^4.1.14"
   }
 }
